--- a/assignedTrips.html
+++ b/assignedTrips.html
@@ -24,7 +24,7 @@
               </div>
 
               <li class="pull-right" id="user">
-                <a href="./replacementOverview.html"><span>Afløser oversigt</span><i class="fas fa-user"></i></a>
+                <a href="./replacementOverview.html"><span>Alex Andersen</span><i class="fas fa-user"></i></a>
               </li>
 
         </header>
