user in all pages
bruger på alle siderne

--- a/newTrips.html
+++ b/newTrips.html
@@ -23,6 +23,10 @@
                 <button class="openbtn" onclick="openNav()">☰</button>
               </div>
 
+              <li class="pull-right" id="user">
+                <a href="./replacementOverview.html"><span>Alex Andersen</span><i class="fas fa-user"></i></a>
+              </li>
+              
         </header>
         
             <aside class="sidebar" id="mySidebar">
