adding buttons to trips

--- a/trips.html
+++ b/trips.html
@@ -71,6 +71,10 @@
         <main>
           <h1>Oprettede ture</h1>
 
+          <div class="btnTrips">
+            <a href="./newTrips.html" class="button">Opret en ny tur</a>
+            <a href="*" class="button">Tilføj/fjern kolonner</a>
+        </div>
           <div class="filter">
               Filtrer <i class="fas fa-sort-down rotate" data-toggle="tooltip" title="Sorter i oprettede ture efter forskellige paramentere"></i>
               <div class="dropdown-content">
