--- a/trips.html
+++ b/trips.html
@@ -53,7 +53,7 @@
            
         
 
-        <main>
+        <main id="mainContent">
           <h1>Oprettede ture</h1>
 
           <div class="btnTrips">
