--- a/newTrips.html
+++ b/newTrips.html
@@ -75,49 +75,69 @@
 
           <form>
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputEmail4">Startsdato</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-              </div>
-              <div class="form-group col-md-6">
-                <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="inputAddress">Address</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
-            <div class="form-group">
-              <label for="inputAddress2">Address 2</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity">
+              <div class="form-group col-md-4">
+                <label for="inputDato">Startdato</label>
+                <input type="text" class="form-control" id="inputdate">
               </div>
               <div class="form-group col-md-4">
-                <label for="inputState">State</label>
+                <label for="inputTrafic">Trafik</label>
+                <input type="text" class="form-control" id="inputTrafic">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputContact">Address</label>
+                <input type="text" class="form-control" id="inputContect">
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group col-md-3">
+                <label for="inputDato">Slutdato</label>
+                <input type="text" class="form-control" id="inputdate">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="inputDuration">Varighed</label>
+                <input type="text" class="form-control" id="inputDuration" placeholder="DD/TT">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="inputDepartment">Afdeling</label>
+                <input type="text" class="form-control" id="inputDepartment">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="inputDato">Starttid</label>
+                <input type="text" class="form-control" id="inputdate">
+              </div>
+            </div>
+
+            <div class="form-row">
+              
+              <div class="form-group col-md-6">
+                <label for="inputState">Startsted</label>
                 <select id="inputState" class="form-control">
                   <option selected>Choose...</option>
                   <option>...</option>
                 </select>
               </div>
-              <div class="form-group col-md-2">
-                <label for="inputZip">Zip</label>
-                <input type="text" class="form-control" id="inputZip">
+              <div class="form-group col-md-6">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="gridCheck">
+                  <label class="form-check-label" for="gridCheck">
+                    Hastetur
+                  </label>
+                </div>
+              </div>
               </div>
             </div>
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                  Check me out
-                </label>
-              </div>
+
+            <div class="form-group col-md-12">
+              <label for="Text" class="form-label">Beskrivelse</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+
+
+            </div>
+            <div class="col-md-12">
+                <button type="submit" class="submitBtn col-md-2">Opret tur</button>
+            </div>
           </form>
 
           
