--- a/replacementOverview.html
+++ b/replacementOverview.html
@@ -57,7 +57,7 @@
 
 
                     <li class="sub-menu">
-                        <button class="dropdown-btn"><i class="far fa-list-alt"></i>Dropdown<i class="arrow fa fa-angle-down pull-right"></i>                  </button>
+                        <button class="dropdown-btn"><i class="far fa-list-alt"></i>Ture<i class="arrow fa fa-angle-down pull-right"></i>                  </button>
                           <div class="dropdown-container">
                             <a href="./replacementOverview.html" class="w3-bar-item w3-button">Anmodninger</a>
                             <a href="./assignedTrips.html" class="w3-bar-item w3-button">Tildelte ture</a>
